# crypto-alpha-radar

./: .env.example  .gitignore  .twitter_accounts.example.json  README.md  alpha-radar.service  pyproject.toml
src/crypto_alpha_radar/: cli.py  config.py  constants.py  db.py  formatters.py  integrations.py  llm_client.py  logging_setup.py  parsing.py  pipeline.py  rating.py  service.py  timeutils.py
src/crypto_alpha_radar/adapters/: __init__.py  base.py  binance.py  twitter.py
src/crypto_alpha_radar/analyzers/: __init__.py  opportunity.py
src/crypto_alpha_radar/domain/: __init__.py  models.py
src/crypto_alpha_radar/trading/: __init__.py  exchange.py  models.py  router.py  service.py
