[project]
name = "crypto-alpha-radar"
version = "0.1.0"
description = "Multi-source crypto opportunity monitor with Telegram alerts"
authors = [
    { name = "pagefau1t", email = "pagefau1t@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "twscrape>=0.17.0",
]

[project.scripts]
crypto-alpha-radar = "crypto_alpha_radar.cli:main"
alpha-radar = "crypto_alpha_radar.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "data", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
